<resources>
    <string name="app_name">Issue Application</string>
    <string name="add">Добави</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Име на подател</string>
    <string name="phone">Телефон на подател</string>
    <string name="address">Адрес на аварията</string>
    <string name="description">Описание</string>
    <string name="start_progress">Започни обработване</string>
    <string name="done">Завършена</string>
    <string name="invalid_data">Невалидни данни</string>
</resources>